--- a/front-aibro-sn/package.json
+++ b/front-aibro-sn/package.json
@@ -16,6 +16,7 @@
     "lucide-react": "^0.474.0",
     "postcss": "^8.5.1",
     "react": "^18.3.1",
+    "react-beautiful-dnd": "^13.1.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.3",
