reviewed the backend routes for workout instances in program, and fixed the frontend refresh / update in plan detail

--- a/aibro-social-network/requirements.txt
+++ b/aibro-social-network/requirements.txt
@@ -4,3 +4,4 @@ django-cors-headers  # For CORS
 djangorestframework-simplejwt  # For JWT authentication
 python-dotenv  # For loading .env files
 Pillow  # For image handling (ImageField)
+drf-nested-routers
