--- a/front-aibro-sn/package.json
+++ b/front-aibro-sn/package.json
@@ -20,6 +20,7 @@
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.54.2",
     "react-router-dom": "^7.1.3",
+    "recharts": "^2.15.1",
     "tailwindcss": "^3.4.17"
   },
   "devDependencies": {
