--- a/front-aibro-sn/package.json
+++ b/front-aibro-sn/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/forms": "^0.5.10",
+    "@tanstack/react-query": "^5.68.0",
     "autoprefixer": "^10.4.20",
     "axios": "^1.7.9",
     "lucide-react": "^0.474.0",
