realtime workout logger

--- a/dou-mobile/package.json
+++ b/dou-mobile/package.json
@@ -16,14 +16,17 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-google-signin/google-signin": "^13.2.0",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@tanstack/react-query": "^5.69.0",
+    "@types/react-native-background-timer": "^2.0.2",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "expo": "~52.0.46",
+    "expo-background-timer": "^0.2.0",
     "expo-blur": "~14.0.3",
     "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
