--- a/dou-mobile/package.json
+++ b/dou-mobile/package.json
@@ -53,7 +53,9 @@
     "react-native-svg": "15.8.0",
     "react-native-web": "~0.19.13",
     "react-native-webview": "13.12.5",
-    "victory-native": "^41.16.2"
+    "react-use-websockets": "^3.4.1",
+    "victory-native": "^41.16.2",
+    "expo-image": "~2.0.7"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
