--- a/dou-mobile/package.json
+++ b/dou-mobile/package.json
@@ -1,7 +1,7 @@
 {
   "name": "dou-mobile",
-  "main": "expo-router/entry",
   "version": "1.0.0",
+  "main": "expo-router/entry",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
@@ -25,17 +25,17 @@
     "@types/react-native-background-timer": "^2.0.2",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
-    "expo": "^53.0.0",
+    "expo": "~53.0.9",
     "expo-background-timer": "^0.2.0",
     "expo-blur": "~14.1.4",
-    "expo-constants": "~17.1.5",
-    "expo-font": "~13.3.0",
+    "expo-constants": "~17.1.6",
+    "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
-    "expo-image": "~2.1.6",
+    "expo-image": "~2.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
-    "expo-linking": "~7.1.4",
-    "expo-router": "~5.0.4",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.0.7",
     "expo-secure-store": "~14.2.3",
     "expo-splash-screen": "~0.30.8",
     "expo-status-bar": "~2.2.3",
@@ -57,18 +57,18 @@
     "react-use-websockets": "^3.4.1",
     "victory-native": "^41.16.2",
     "@types/react": "~19.0.10",
-    "jest-expo": "~53.0.3",
+    "jest-expo": "~53.0.5",
     "typescript": "~5.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.6",
+    "jest-expo": "~53.0.5",
     "react-test-renderer": "18.3.1",
-    "typescript": "^5.3.3"
+    "typescript": "~5.8.3"
   },
   "private": true
 }
