--- a/dou-mobile/package.json
+++ b/dou-mobile/package.json
@@ -22,6 +22,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@tanstack/react-query": "^5.69.0",
+    "@types/react": "~19.0.10",
     "@types/react-native-background-timer": "^2.0.2",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
@@ -29,9 +30,11 @@
     "expo-background-timer": "^0.2.0",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
+    "expo-file-system": "^18.1.10",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
     "expo-image": "~2.1.7",
+    "expo-image-manipulator": "^13.1.7",
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.5",
@@ -41,6 +44,7 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
+    "jest-expo": "~53.0.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.2",
@@ -55,10 +59,8 @@
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "react-use-websockets": "^3.4.1",
-    "victory-native": "^41.16.2",
-    "@types/react": "~19.0.10",
-    "jest-expo": "~53.0.5",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "victory-native": "^41.16.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
