--- a/dou-mobile/package.json
+++ b/dou-mobile/package.json
@@ -15,6 +15,7 @@
     "preset": "jest-expo"
   },
   "dependencies": {
+    "@expo/apple-utils": "^2.1.12",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.3.0",
@@ -24,8 +25,10 @@
     "@tanstack/react-query": "^5.69.0",
     "@types/react": "~19.0.10",
     "@types/react-native-background-timer": "^2.0.2",
+    "ajv-keywords": "^5.1.0",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
+    "eas-cli": "^16.6.2",
     "expo": "~53.0.9",
     "expo-background-timer": "^0.2.0",
     "expo-blur": "~14.1.4",
@@ -60,7 +63,8 @@
     "react-native-webview": "13.13.5",
     "react-use-websockets": "^3.4.1",
     "typescript": "~5.8.3",
-    "victory-native": "^41.16.2"
+    "victory-native": "^41.16.2",
+    "wrap-ansi": "^9.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -69,7 +73,6 @@
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
     "jest-expo": "~53.0.5",
-    "react-test-renderer": "18.3.1",
     "typescript": "~5.8.3"
   },
   "private": true
