--- a/dou-mobile/app.json
+++ b/dou-mobile/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "dou-mobile",
+    "name": "Dou",
     "slug": "dou-social-network-mobile-app",
     "version": "1.0.0",
     "orientation": "portrait",
