--- a/dou-mobile/eas.json
+++ b/dou-mobile/eas.json
@@ -3,6 +3,7 @@
     "version": ">= 16.6.2",
     "appVersionSource": "remote"
   },
+
   "build": {
     "development": {
       "developmentClient": true,
@@ -12,10 +13,17 @@
       "distribution": "internal"
     },
     "production": {
+      "distribution": "store",     
       "autoIncrement": true
     }
   },
+
   "submit": {
-    "production": {}
+    "production": {
+      "ios": {
+        "appleId":    "douxthibault@gmail.com",  
+        "ascAppId":   "6746456161"
+      }
+    }
   }
 }
