--- a/dou-mobile/package.json
+++ b/dou-mobile/package.json
@@ -65,7 +65,8 @@
     "react-native-webview": "13.13.5",
     "react-use-websockets": "^3.4.1",
     "typescript": "~5.8.3",
-    "victory-native": "^41.16.2"
+    "victory-native": "^41.16.2",
+    "expo-localization": "~16.1.5"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
