--- a/dou-mobile/package.json
+++ b/dou-mobile/package.json
@@ -3,19 +3,15 @@
   "version": "1.0.0",
   "main": "expo-router/entry",
   "scripts": {
-    "start": "expo start",
+    "start": "npx expo start",
     "reset-project": "node ./scripts/reset-project.js",
-    "android": "expo start --android",
-    "ios": "expo start --ios",
-    "web": "expo start --web",
+    "android": "npx expo start --android",
+    "ios": "npx expo start --ios",
+    "web": "npx expo start --web",
     "test": "jest --watchAll",
-    "lint": "expo lint"
-  },
-  "jest": {
-    "preset": "jest-expo"
+    "lint": "npx expo lint"
   },
   "dependencies": {
-    "@expo/apple-utils": "^2.1.12",
     "@expo/vector-icons": "^14.1.0",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.3.0",
@@ -23,14 +19,9 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@tanstack/react-query": "^5.69.0",
-    "@types/react": "~19.0.10",
-    "@types/react-native-background-timer": "^2.0.2",
-    "ajv-keywords": "^5.1.0",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
-    "eas-cli": "^16.6.2",
     "expo": "~53.0.9",
-    "expo-background-timer": "^0.2.0",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
     "expo-device": "~7.1.4",
@@ -42,6 +33,7 @@
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.5",
+    "expo-localization": "~16.1.5",
     "expo-notifications": "~0.31.3",
     "expo-router": "~5.1.0",
     "expo-secure-store": "~14.2.3",
@@ -49,24 +41,21 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
-    "jest-expo": "~53.0.5",
     "react": "19.0.0",
     "react-dom": "19.0.0",
-    "react-native": "0.79.3",
-    "react-native-chart-kit": "^6.12.0",
+    "react-native": "0.79.4",
     "react-native-dotenv": "^3.4.11",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "react-use-websockets": "^3.4.1",
-    "typescript": "~5.8.3",
-    "victory-native": "^41.16.2",
-    "expo-localization": "~16.1.5"
+    "typescript": "~5.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -76,6 +65,22 @@
     "jest": "^29.2.1",
     "jest-expo": "~53.0.5",
     "typescript": "~5.8.3"
+  },
+  "overrides": {
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
+  },
+  "resolutions": {
+    "react": "19.0.0",
+    "react-dom": "19.0.0"
+  },
+  "expo": {
+    "doctor": {
+      "reactNativeDirectoryCheck": {
+        "exclude": ["react-native-feather", "react-use-websockets", "typescript"],
+        "listUnknownPackages": false
+      }
+    }
   },
   "private": true
 }
