--- a/dou-mobile/package.json
+++ b/dou-mobile/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "@tanstack/react-query": "^5.69.0",
+    "@types/lodash": "^4.17.18",
     "axios": "^1.8.4",
     "date-fns": "^4.1.0",
     "expo": "~53.0.9",
@@ -41,21 +42,23 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
+    "lodash": "^4.17.21",
     "react": "19.0.0",
     "react-dom": "19.0.0",
     "react-native": "0.79.4",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-dotenv": "^3.4.11",
     "react-native-feather": "^1.1.2",
     "react-native-gesture-handler": "~2.24.0",
     "react-native-reanimated": "~3.17.4",
-    "react-native-chart-kit": "^6.12.0",
     "react-native-safe-area-context": "5.4.0",
     "react-native-screens": "~4.11.1",
     "react-native-svg": "15.11.2",
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "react-use-websockets": "^3.4.1",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "expo-local-authentication": "~16.0.4"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
@@ -77,7 +80,11 @@
   "expo": {
     "doctor": {
       "reactNativeDirectoryCheck": {
-        "exclude": ["react-native-feather", "react-use-websockets", "typescript"],
+        "exclude": [
+          "react-native-feather",
+          "react-use-websockets",
+          "typescript"
+        ],
         "listUnknownPackages": false
       }
     }
