--- a/dou-mobile/package.json
+++ b/dou-mobile/package.json
@@ -34,6 +34,7 @@
     "expo-image-picker": "~16.1.4",
     "expo-linear-gradient": "~14.1.4",
     "expo-linking": "~7.1.5",
+    "expo-local-authentication": "~16.0.4",
     "expo-localization": "~16.1.5",
     "expo-notifications": "~0.31.3",
     "expo-router": "~5.1.0",
@@ -42,6 +43,8 @@
     "expo-status-bar": "~2.2.3",
     "expo-symbols": "~0.4.4",
     "expo-system-ui": "~5.0.7",
+    "glob": "^11.0.3",
+    "ignore": "^7.0.5",
     "lodash": "^4.17.21",
     "react": "19.0.0",
     "react-dom": "19.0.0",
@@ -57,8 +60,7 @@
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "react-use-websockets": "^3.4.1",
-    "typescript": "~5.8.3",
-    "expo-local-authentication": "~16.0.4"
+    "typescript": "~5.8.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
