--- a/dou-mobile/package.json
+++ b/dou-mobile/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
+    "@gorhom/bottom-sheet": "^5.1.6",
     "@react-native-async-storage/async-storage": "2.1.2",
     "@react-native-community/datetimepicker": "8.3.0",
     "@react-native-google-signin/google-signin": "^13.2.0",
@@ -63,7 +64,8 @@
     "react-native-web": "^0.20.0",
     "react-native-webview": "13.13.5",
     "react-use-websockets": "^3.4.1",
-    "typescript": "~5.8.3"
+    "typescript": "~5.8.3",
+    "expo-location": "~18.1.6"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
